# nlp-project

./: CMakeLists.txt  README.md  transformer_model.metadata.json
data/: test.txt  train-mini.txt  train.txt  validate.txt
include/: alphabet.hpp  combo_node.hpp  custom_net.hpp  input_node.hpp  ngram.hpp  node.hpp  progress.hpp  string.hpp  util.hpp
src/: combo_node.cpp  custom_net.cpp  information.py  input_node.cpp  main.cpp  network.py  ngram.cpp  node.cpp  progress.cpp  sentence.py  string.cpp  transformer.py  util.cpp
transformer_model/: saved_model.pb
transformer_model/variables/: variables.index
